# proka-fs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Kconfig.toml  Makefile  README.md
.github/workflows/: build-utils.yml  build.yml  test.yml
docs/: README.md  direntry.md  fsstruct.md
fs/: Cargo.toml  README.md
fs/src/: bitmap.rs  lib.rs
fs/src/definition/: direntry.rs  inode.rs  mod.rs  superblock.rs
src/: lib.rs
src/definition/: mod.rs  superblock.rs
utils/: Cargo.toml
